fixed weird white space bug

--- a/src/GoT.css
+++ b/src/GoT.css
@@ -31,7 +31,6 @@
 }
 
 .grid {
-  width: 100%;
   height: 100%;
   overflow-x: scroll;
   padding: 2em;
